@@ -4,7 +4,6 @@
 
 parent.0 = ../../gp/koza/koza.params
 
-
 # Stolen from koza/params -- overwriting just
 # a little for readability
 # You need to create at least one function set, 
